# mlops-repo

./: .gitignore  Makefile  README.md  Resultados_sobre_características_de_las_localidades.ipynb  pyproject.toml
.dvc/: config
airflow/dags/: inmuebles24_delegacion_scrape_dag.py
data/processed/: final_features.json  final_processed_data.parquet  inmuebles24_departamentos.parquet  inmuebles24_departamentos_2025-08-31.parquet  inmuebles24_departamentos_2025-09-14.parquet  inmuebles24_departamentos_2025-09-20.parquet  inmuebles24_departamentos_2025-09-27.parquet  inmuebles24_departamentos_2025-10-05.parquet  inmuebles24_departamentos_2025-10-11.parquet  inmuebles24_departamentos_20250927.parquet  inmuebles24_departamentos_20251005.parquet  inmuebles24_departamentos_coordenadas_2025-08-31.parquet  inmuebles24_departamentos_coordenadas_2025-09-14.parquet  inmuebles24_departamentos_coordenadas_2025-09-20.parquet  inmuebles24_departamentos_coordenadas_2025-09-24.parquet  inmuebles24_departamentos_coordenadas_2025-09-27.parquet  inmuebles24_departamentos_coordenadas_2025-10-05.parquet  (+16 more)
data/raw/: .gitignore  (+7 more)
docs/: mkdocs.yml
mlops_repo/: __init__.py  dataset.py  features.py  plots.py
models/: gradient_boosting_metrics.json  gradient_boosting_pipeline.joblib  gradient_boosting_tuned_metrics.json  gradient_boosting_tuned_pipeline.joblib  linear_regression_metrics.json  linear_regression_pipeline.joblib  random_forest_metrics.json  random_forest_tuned_metrics.json  xgboost_metrics.json  xgboost_pipeline.joblib  xgboost_tuned_metrics.json  xgboost_tuned_pipeline.joblib
(+781 files in other folders)
