[project]
name = "mlops_repo"
version = "0.0.1"
description = "This is the repo for the Softwaare Engineering for Big Data and ML"
authors = [
  { name = "Renata y Eduardo" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["mlops_repo"]
include = ["pyproject.toml", "mlops_repo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_repo"]
force-sort-within-sections = true


[tool.poetry.dependencies]
pandas = "^2.3.1"
numpy = "^2.3.1"
scikit-learn = "^1.7.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.7"
pytest = "^8.4.1"

